--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -49,7 +49,7 @@ jobs:
               --disable=line-too-long,missing-function-docstring,missing-module-docstring \
               --disable=missing-class-docstring,duplicate-code,unused-import,too-many-public-methods \
               --disable=invalid-name,unneeded-not,too-many-arguments,too-many-instance-attributes, \
-              --disable=superfluous-parens,broad-exception-caught
+              --disable=superfluous-parens,broad-exception-caught,too-few-public-methods
       shell: bash
 
     - name: Test Zserio Python tutorial
@@ -68,7 +68,7 @@ jobs:
               --disable=line-too-long,missing-function-docstring,missing-module-docstring \
               --disable=missing-class-docstring,duplicate-code,unused-import,too-many-public-methods \
               --disable=invalid-name,unneeded-not,too-many-arguments,too-many-instance-attributes, \
-              --disable=superfluous-parens,broad-exception-caught
+              --disable=superfluous-parens,broad-exception-caught,too-few-public-methods
       shell: bash
 
     - name: Test Zserio Python tutorial (sources regeneration)
