--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         os: ["windows-latest"]
-        python-version: ["3.8", "3.9", "3.10", "3.11"]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -36,9 +36,10 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install setuptools # necessary for pkg_resources on Python 3.12
         python -m pip install zserio
-        python -m pip install astroid==2.15.0
-        python -m pip install pylint==2.16.3
+        python -m pip install astroid==3.0.3
+        python -m pip install pylint==3.0.3
         python -m pip install mypy==0.931
       shell: bash
 
